Fixed help dropdown showing off-screen

--- a/frontend/src/styles/Dropdown.css
+++ b/frontend/src/styles/Dropdown.css
@@ -10,6 +10,9 @@
   padding-left: 0.3rem;
 }
 
+.dropdown-right {
+  right: 0.6em;
+}
 .show {
     display: block;
 }
